feat(security): implement RBAC and authorization controls
* Added role-based access control (RBAC) using Spring Security
* Secured admin APIs with class-level @PreAuthorize(ROLE_ADMIN)
* Protected admin user unlock operation
* Added method-level authorization checks for auth endpoints
* Secured logout and change-password APIs for authenticated users
* Implemented login history ownership validation
* Allowed admins to access all user login history records
* Restricted users to accessing only their own login history
* Enhanced JWT-based authorization and access management